updated/new examples and api method name renames